fixed spacing on the feed and aded changes to the cookiepolicy. mde the sidebar black and changed th color of the artist on the songnorification

--- a/src/cookiePolicy.scss
+++ b/src/cookiePolicy.scss
@@ -14,7 +14,7 @@ $unis-silver: #918f8f;
   padding: 120px 20px 80px;
   display: flex;
   justify-content: center;
-  margin-left: 20%;
+  margin-left: 15%;
   width: 100vw;
   overflow: hidden;
 
