--- a/src/feed.scss
+++ b/src/feed.scss
@@ -34,7 +34,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 8.5%; 
+  padding-top: 7%; 
   @media (min-width: 1025px) {
     // Push the feed to the right to clear the 250px Sidebar
     margin-left: 260px; 
